test/sema/positive/typevar_instantiation5.impala
trait T {}
fn myf[A:T](x: A, f: fn[B:T](B)->B) -> A {
   f[A](x)
}
