test/sema/negative/bound_checking1.impala
trait T {}
fn myf[A](x: A, f: fn[B:T](B)->B) -> A {
   f[A](x)
}
